// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Star has class Star-active 1`] = `
<svg
  className="Star Star--active"
>
  <polygon
    points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
    style={
      Object {
        "fillRule": "nonzero",
      }
    }
  />
</svg>
`;

exports[`Star has class Star-inactive 1`] = `
<svg
  className="Star Star--inactive"
>
  <polygon
    points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
    style={
      Object {
        "fillRule": "nonzero",
      }
    }
  />
</svg>
`;
